--- a/bork_z6.css
+++ b/bork_z6.css
@@ -1,10 +1,10 @@
 body {
-color: blue ;
-font-size: 41 px;
- }
+color: blue;
+font-size: 41mm;
+}
 
 p {
 color: green;
-font-size: 51 px;
- }
+font-size: 51mm;
+}
 
