--- a/z19_bork.css
+++ b/z19_bork.css
@@ -1,4 +1,13 @@
 p {
 color: red;
-font-size: 40mm
+font-size: 40mm;
+}
+
+div {
+background-color:silver;
+}
+
+span{
+color: green;
+font-size:25mm;
 }
