--- a/zad36_bork.css
+++ b/zad36_bork.css
@@ -1,10 +1,10 @@
  body{
- background-color: rgb(0,100,0);
+ background-color: rgb(204, 153, 255);
  text-align : center;
  margin : 50px;
 }
 div {
- background : rgb(204, 153, 255);
+ background : rgb(0, 0, 102);
  width : 400px;
  border : 3px black solid;
  }
